Course Modules grouped by section or Week.
Course Modules grouping implemented.
The application will group modules by sections or by weeks
depending on the course setting.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         }
     </style>
     <script id="cordova" type="text/javascript" src="cordova-2.1.0.js"></script>
+    <script id="childsbrowser" type="text/javascript" src="childbrowser.js"></script>
+    <script id="childsbrowser" type="text/javascript" src="webintent.js"></script>
 <script type="text/javascript">
 <!--
 // Wait for Cordova to load
