--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
         }
     </style>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
-    <script id="cordova" type="text/javascript" src="cordova-2.2.0.js"></script>
-    <script id="childsbrowser" type="text/javascript" src="plugins/downloader.js"></script>
-    <script id="childsbrowser" type="text/javascript" src="plugins/webintent.js"></script>
-    <script id="childsbrowser" type="text/javascript" src="plugins/childbrowser.js"></script>
+    <script id="cordova" type="text/javascript" src="cordova-2.3.0.js"></script>
+    <script id="downloader" type="text/javascript" src="plugins/downloader.js"></script>
+    <script id="webintent" type="text/javascript" src="plugins/webintent.js"></script>
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
 </head>
 <body>
