--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         }
     </style>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
+    <script id="jquery" type="text/javascript" src="js/jquery/jquery-1.10.2.min.js"></script>
     <script id="loader" type="text/javascript" src="js/loader.js"></script>
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
 	<!--
