weinre ref removed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <script id="jquery" type="text/javascript" src="js/jquery/jquery-1.10.2.min.js"></script>
     <script id="loader" type="text/javascript" src="js/loader.js"></script>
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
-	<script src="http://193.5.152.123:8081/target/target-script-min.js#anonymous"></script>
+    <!--script src="http://193.5.152.123:8081/target/target-script-min.js#anonymous"></script-->
 </head>
 <body>
     <div id="appLoadingIndicator">
