--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
             background-color: #F90
         }
 
+        #appLoadingHeader {
+            position: absolute;
+            top: 50%;
+			text-align: center;
+            margin-top: -100px;
+        }
+
+        #appLoadingHeader img {
+			width: 80%;
+			max-width: 534px;
+        }
+
         #appLoadingIndicator {
             position: absolute;
             top: 50%;
-            margin-top: -15px;
             text-align: center;
             width: 100%;
             height: 30px;
@@ -54,8 +65,12 @@
     <script id="loader" type="text/javascript" src="js/loader.js"></script>
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
     <!--script src="http://193.5.152.123:8081/target/target-script-min.js#anonymous"></script-->
+	<!--
+    <script src="http://10.10.5.37:8080/target/target-script-min.js#anonymous"></script>
+	-->
 </head>
 <body>
+    <div id="appLoadingHeader"><img src="resources/images/loading_header.png" alt="loading header" /></div>
     <div id="appLoadingIndicator">
         <div></div>
         <div></div>
