--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         #appLoadingHeader {
             position: absolute;
             top: 50%;
+            width: 100%;
 			text-align: center;
-            margin-top: -100px;
+            margin-top: -110px;
         }
 
         #appLoadingHeader img {
-			width: 80%;
-			max-width: 534px;
+			width: 400px;
         }
 
         #appLoadingIndicator {
