--- a/index.html
+++ b/index.html
@@ -4,31 +4,20 @@
     <meta charset="UTF-8">
     <title>MoodleMobApp</title>
     <style type="text/css">
-         /**
-         * Example of an initial loading indicator.
-         * It is recommended to keep this as minimal as possible to provide instant feedback
-         * while other resources are still being loaded for the first time
-         */
+            /**
+            * Example of an initial loading indicator.
+            * It is recommended to keep this as minimal as possible to provide instant feedback
+            * while other resources are still being loaded for the first time
+            */
         html, body {
             height: 100%;
             background-color: #F90
         }
 
-        #appLoadingHeader {
-            position: absolute;
-            top: 50%;
-            width: 100%;
-			text-align: center;
-            margin-top: -110px;
-        }
-
-        #appLoadingHeader img {
-			width: 400px;
-        }
-
         #appLoadingIndicator {
             position: absolute;
             top: 50%;
+            margin-top: -15px;
             text-align: center;
             width: 100%;
             height: 30px;
@@ -64,17 +53,18 @@
     <script id="jquery" type="text/javascript" src="js/jquery/jquery-1.10.2.min.js"></script>
     <script id="loader" type="text/javascript" src="js/loader.js"></script>
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
-    <!--script src="http://193.5.152.123:8081/target/target-script-min.js#anonymous"></script-->
-	<!--
-    <script src="http://10.10.5.37:8080/target/target-script-min.js#anonymous"></script>
-	-->
+    <!--<script src="http://193.5.152.123:8081/target/target-script-min.js#anonymous"></script>-->
+    <!--<script src="http://192.168.1.100:8081/target/target-script-min.js#anonymous"></script>-->
+    <script>
+        var origin = document.location.href.substring(0, document.location.href.lastIndexOf('/')+1);
+        localStorage.filesystemOrigin = origin;
+    </script>
 </head>
 <body>
-    <div id="appLoadingHeader"><img src="resources/images/loading_header.png" alt="loading header" /></div>
-    <div id="appLoadingIndicator">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+<div id="appLoadingIndicator">
+    <div></div>
+    <div></div>
+    <div></div>
+</div>
 </body>
 </html>
