--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
             background-color: #F90
         }
 
+        #appLoadingHeader {
+            position: absolute;
+            top: 50%;
+            width: 100%;
+            text-align: center;
+            margin-top: -110px;
+        }
+
+        #appLoadingHeader img {
+            width: 400px;
+        }
         #appLoadingIndicator {
             position: absolute;
             top: 50%;
-            margin-top: -15px;
             text-align: center;
             width: 100%;
             height: 30px;
@@ -61,6 +71,7 @@
     </script>
 </head>
 <body>
+<div id="appLoadingHeader"><img src="resources/images/loading_header.png" alt="loading header" /></div>
 <div id="appLoadingIndicator">
     <div></div>
     <div></div>
