--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
         #appLoadingHeader {
             position: absolute;
             top: 50%;
-            width: 100%;
-            text-align: center;
+            left: 50%;
+            width: 400px;
+            height: 110px;
+            text-align: left;
             margin-top: -110px;
+            margin-left: -200px;
         }
 
         #appLoadingHeader img {
