--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
         }
     </style>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
+    <script id="cordova" type="text/javascript" src="cordova.js"></script>
     <script id="jquery" type="text/javascript" src="js/jquery/jquery-1.10.2.min.js"></script>
     <script id="loader" type="text/javascript" src="js/loader.js"></script>
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
-    <!--<script src="http://193.5.152.123:8081/target/target-script-min.js#anonymous"></script>-->
+    <!-- <script src="http://10.10.4.225:8080/target/target-script-min.js#anonymous"></script> -->
     <!--<script src="http://192.168.1.100:8081/target/target-script-min.js#anonymous"></script>-->
     <script>
         var origin = document.location.href.substring(0, document.location.href.lastIndexOf('/')+1);
