--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <script id="cordova" type="text/javascript" src="cordova.js"></script>
     <script id="jquery" type="text/javascript" src="js/jquery/jquery-1.10.2.min.js"></script>
     <script id="loader" type="text/javascript" src="js/loader.js"></script>
+    <script id="latinize" type="text/javascript" src="js/latinise.min.js"></script>
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
     <!-- <script src="http://10.10.5.65:8080/target/target-script-min.js#anonymous"></script> -->
     <script>
