--- a/index.html
+++ b/index.html
@@ -1,85 +1,86 @@
 <!DOCTYPE HTML>
 <html manifest="" lang="en-US">
 <head>
-    <meta charset="UTF-8">
-    <title>MoodleMobApp</title>
-    <style type="text/css">
-            /**
-            * Example of an initial loading indicator.
-            * It is recommended to keep this as minimal as possible to provide instant feedback
-            * while other resources are still being loaded for the first time
-            */
-        html, body {
-            height: 100%;
-            background-color: #F90
-        }
+	<meta charset="UTF-8">
+	<title>MoodleMobApp</title>
+	<style type="text/css">
+			/**
+			* Example of an initial loading indicator.
+			* It is recommended to keep this as minimal as possible to provide instant feedback
+			* while other resources are still being loaded for the first time
+			*/
+		html, body {
+			height: 100%;
+			background-color: #F90
+		}
 
-        #appLoadingHeader {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 400px;
-            height: 110px;
-            text-align: left;
-            margin-top: -110px;
-            margin-left: -200px;
-        }
+		#appLoadingHeader {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: 400px;
+			height: 110px;
+			text-align: left;
+			margin-top: -110px;
+			margin-left: -200px;
+		}
 
-        #appLoadingHeader img {
-            width: 400px;
-        }
-        #appLoadingIndicator {
-            position: absolute;
-            top: 50%;
-            text-align: center;
-            width: 100%;
-            height: 30px;
-            -webkit-animation-name: appLoadingIndicator;
-            -webkit-animation-duration: 0.5s;
-            -webkit-animation-iteration-count: infinite;
-            -webkit-animation-direction: linear;
-        }
+		#appLoadingHeader img {
+			width: 400px;
+		}
+		#appLoadingIndicator {
+			position: absolute;
+			top: 50%;
+			text-align: center;
+			width: 100%;
+			height: 30px;
+			-webkit-animation-name: appLoadingIndicator;
+			-webkit-animation-duration: 0.5s;
+			-webkit-animation-iteration-count: infinite;
+			-webkit-animation-direction: linear;
+		}
 
-        #appLoadingIndicator > * {
-            background-color: #FFFFFF;
-            display: inline-block;
-            height: 30px;
-            -webkit-border-radius: 15px;
-            margin: 0 5px;
-            width: 30px;
-            opacity: 0.8;
-        }
+		#appLoadingIndicator > * {
+			background-color: #FFFFFF;
+			display: inline-block;
+			height: 30px;
+			-webkit-border-radius: 15px;
+			margin: 0 5px;
+			width: 30px;
+			opacity: 0.8;
+		}
 
-        @-webkit-keyframes appLoadingIndicator{
-            0% {
-                opacity: 0.8
-            }
-            50% {
-                opacity: 0
-            }
-            100% {
-                opacity: 0.8
-            }
-        }
-    </style>
-    <!-- The line below must be kept intact for Sencha Command to build your application -->
-    <script id="cordova" type="text/javascript" src="cordova.js"></script>
-    <script id="jquery" type="text/javascript" src="js/jquery/jquery-1.10.2.min.js"></script>
-    <script id="loader" type="text/javascript" src="js/loader.js"></script>
-    <script id="latinize" type="text/javascript" src="js/latinise.min.js"></script>
-    <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
-    <!-- <script src="http://10.10.5.98:8080/target/target-script-min.js#anonymous"></script> -->
-    <script>
-        var origin = document.location.href.substring(0, document.location.href.lastIndexOf('/')+1);
-        localStorage.filesystemOrigin = origin;
-    </script>
+		@-webkit-keyframes appLoadingIndicator{
+			0% {
+				opacity: 0.8
+			}
+			50% {
+				opacity: 0
+			}
+			100% {
+				opacity: 0.8
+			}
+		}
+	</style>
+	<!-- The line below must be kept intact for Sencha Command to build your application -->
+	<script id="cordova" type="text/javascript" src="cordova.js"></script>
+	<script id="jquery" type="text/javascript" src="js/jquery/jquery-1.10.2.min.js"></script>
+	<script id="loader" type="text/javascript" src="js/loader.js"></script>
+	<script id="latinize" type="text/javascript" src="js/latinise.min.js"></script>
+	<script id="charts" type="text/javascript" src="js/highcharts.js"></script>
+	<script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
+	<!-- <script src="http://10.10.5.98:8080/target/target-script-min.js#anonymous"></script> -->
+	<script>
+		var origin = document.location.href.substring(0, document.location.href.lastIndexOf('/')+1);
+		localStorage.filesystemOrigin = origin;
+	</script>
 </head>
 <body>
 <div id="appLoadingHeader"><img src="resources/images/loading_header.png" alt="loading header" /></div>
 <div id="appLoadingIndicator">
-    <div></div>
-    <div></div>
-    <div></div>
+	<div></div>
+	<div></div>
+	<div></div>
 </div>
 </body>
 </html>
